# Perceptron-with-Python

./: README.md
perceptron with one layer/: Perceptron.py  data_result.csv  data_weights.csv  linear_regression.py  training.py
perceptron with one layer/dados/: dados_2D_horizontal.csv  dados_2D_parabola.csv  dados_2D_reta.csv
perceptron-multi-layer/: main.py  pyproject.toml
perceptron-multi-layer/ML/: mlp.py
perceptron-multi-layer/Modulos/Functions_of_Ativation/: Functions.py
perceptron-multi-layer/Modulos/Matrix/: matrix.py
perceptron-multi-layer/Modulos/data_ploting/: data_ploting.py
perceptron-multi-layer/Modulos/data_processing/: datas_processing.py
perceptron-multi-layer/data/: dados_2D_circulo.csv  dados_2D_parabola.csv  dados_2D_seno.csv  data_xor.csv
